First commit for package version tests

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -227,6 +227,8 @@
     <SharedFrameworkLayoutRoot>$(ArtifactsObjDir)SharedFx.Layout\$(Configuration)\$(TargetRuntimeIdentifier)\</SharedFrameworkLayoutRoot>
     <!-- This property points to a folder which includes both Microsoft.NETCore.App and AspNetCore.App. -->
     <RedistSharedFrameworkLayoutRoot>$(ArtifactsObjDir)RedistSharedFx.Layout\$(Configuration)\$(TargetRuntimeIdentifier)\</RedistSharedFrameworkLayoutRoot>
+    <!-- This property points to a folder which includes the (unzipped) contents of our packages, used for testing -->
+    <PackagesLayoutRoot>$(ArtifactsObjDir)Packages.Layout\$(Configuration)\</PackagesLayoutRoot>
 
     <ArchiveExtension>.tar.gz</ArchiveExtension>
     <ArchiveExtension Condition="'$(TargetOsName)' == 'win'">.zip</ArchiveExtension>
