!temporary! Move to Ubuntu 20.04

--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -109,7 +109,7 @@ jobs:
         vmImage: macOS-10.15
       ${{ if eq(parameters.agentOs, 'Linux') }}:
         ${{ if and(eq(parameters.useHostedUbuntu, true), or(ne(variables['System.TeamProject'], 'internal'), in(variables['Build.Reason'], 'Manual', 'PullRequest', 'Schedule'))) }}:
-          vmImage: ubuntu-18.04
+          vmImage: ubuntu-20.04
         ${{ if or(eq(parameters.useHostedUbuntu, false), and(eq(variables['System.TeamProject'], 'internal'), notin(variables['Build.Reason'], 'Manual', 'PullRequest', 'Schedule'))) }}:
           ${{ if eq(variables['System.TeamProject'], 'public') }}:
             name: NetCore1ESPool-Public
@@ -132,6 +132,8 @@ jobs:
           demands: ImageOverride -equals Build.Server.Amd64.VS2019
     ${{ if ne(parameters.container, '') }}:
       container: ${{ parameters.container }}
+    ${{ if and(eq(parameters.agentOs, 'Linux'), eq(parameters.container, ''), or(eq(parameters.useHostedUbuntu, false), and(eq(variables['System.TeamProject'], 'internal'), notin(variables['Build.Reason'], 'Manual', 'PullRequest', 'Schedule')))) }}:
+      container: ubuntu-20.04-coredeps-20220131172322-e6e3ac4
     ${{ if ne(parameters.disableComponentGovernance, '') }}:
       disableComponentGovernance: ${{ parameters.disableComponentGovernance }}
     variables:
