--- a/eng/Workarounds.targets
+++ b/eng/Workarounds.targets
@@ -49,10 +49,9 @@
   </Target>
 
   <!-- Work around https://github.com/dotnet/aspnetcore/issues/34048 -->
-  <Target Name="_RemoveDuplicateLoggingSourceGenerator" AfterTargets="ResolvePackageAssets" Condition="'$(TargetFramework)' == '$(DefaultNetCoreTargetFramework)'">
-    <ItemGroup>
-      <ResolvedAnalyzers Remove="@(ResolvedAnalyzers)" Condition="'%(ResolvedAnalyzers.NuGetPackageId)' == 'Microsoft.Extensions.Logging.Abstractions'" />
-      <ResolvedAnalyzers Remove="@(ResolvedAnalyzers)" Condition="'%(ResolvedAnalyzers.NuGetPackageId)' == 'System.Text.Json'" />
-    </ItemGroup>
+  <Target Name="_RemoveDuplicateLoggingSourceGenerator" AfterTargets="ResolveTargetingPackAssets" Condition="'$(TargetFramework)' == '$(DefaultNetCoreTargetFramework)'">
+    <PropertyGroup>
+      <PackageConflictPreferredPackages>$(PackageConflictPreferredPackages);Microsoft.Internal.Runtime.AspNetCore.Transport</PackageConflictPreferredPackages>
+    </PropertyGroup>
   </Target>
 </Project>
