--- a/src/Razor/test/testassets/SimpleMvc21NetFx/SimpleMvc21NetFx.csproj
+++ b/src/Razor/test/testassets/SimpleMvc21NetFx/SimpleMvc21NetFx.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.3" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="4.5.1" />
   </ItemGroup>
 
   <!-- Test Placeholder -->
