--- a/src/Razor/test/testassets/nuget.config
+++ b/src/Razor/test/testassets/nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+  	<clear />
     <add key="pregenerated" value=".\PregeneratedPackages\" />
   </packageSources>
 </configuration>
