--- a/src/SignalR/clients/ts/signalr/package.json
+++ b/src/SignalR/clients/ts/signalr/package.json
@@ -54,9 +54,12 @@
   },
   "dependencies": {
     "eventsource": "^1.0.7",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.7",
     "abort-controller": "^3.0.0",
     "fetch-cookie": "^0.7.3",
     "ws": "^6.0.0"
+  },
+  "resolutions": {
+    "url-parse": ">=1.5.0"
   }
 }
