Resolve Component Governance bugs

--- a/src/Components/WebAssembly/testassets/StandaloneApp/StandaloneApp.csproj
+++ b/src/Components/WebAssembly/testassets/StandaloneApp/StandaloneApp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <Reference Include="System.Net.Http.Json" />
+    <Reference Include="System.Text.Encodings.Web" />
   </ItemGroup>
 
   <!-- A bit of msbuild magic to support reference resolver tests -->
