--- a/src/Components/Web.JS/package.json
+++ b/src/Components/Web.JS/package.json
@@ -32,6 +32,10 @@
     "webpack-cli": "^3.3.11"
   },
   "resolutions": {
-    "**/set-value": "^2.0.1"
+    "**/set-value": "^2.0.1",
+    "bl": ">=2.2.1",
+    "lodash": ">=4.17.21",
+    "tar": ">=4.4.18",
+    "url-parse": ">=1.5.0"
   }
 }
