--- a/src/Components/WebAssembly/JSInterop/src/Microsoft.JSInterop.WebAssembly.csproj
+++ b/src/Components/WebAssembly/JSInterop/src/Microsoft.JSInterop.WebAssembly.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.JSInterop" />
+    <Reference Include="System.Text.Encodings.Web" />
   </ItemGroup>
 
 </Project>
