--- a/src/Components/WebAssembly/testassets/Wasm.Authentication.Client/Wasm.Authentication.Client.csproj
+++ b/src/Components/WebAssembly/testassets/Wasm.Authentication.Client/Wasm.Authentication.Client.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Reference Include="System.Net.Http.Json" />
+    <Reference Include="System.Text.Encodings.Web" />
     <Reference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <Reference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" />
     <Reference Include="Microsoft.Extensions.Http" />
