--- a/src/Components/test/testassets/BasicTestApp/BasicTestApp.csproj
+++ b/src/Components/test/testassets/BasicTestApp/BasicTestApp.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Reference Include="System.ComponentModel" />
     <Reference Include="System.Net.Http.Json" />
+    <Reference Include="System.Text.Encodings.Web" />
     <Reference Include="Microsoft.AspNetCore.Components.WebAssembly" />
     <Reference Include="Microsoft.AspNetCore.Components.Authorization" />
     <Reference Include="Microsoft.Extensions.Logging.Configuration" />
