--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -133,7 +133,7 @@ jobs:
     ${{ if ne(parameters.container, '') }}:
       container: ${{ parameters.container }}
     ${{ if and(eq(parameters.agentOs, 'Linux'), eq(parameters.container, ''), or(eq(parameters.useHostedUbuntu, false), and(eq(variables['System.TeamProject'], 'internal'), notin(variables['Build.Reason'], 'Manual', 'PullRequest', 'Schedule')))) }}:
-      container: ubuntu-20.04-coredeps-20220131172322-e6e3ac4
+      container: mcr.microsoft.com/dotnet-buildtools/prereqs:ubuntu-20.04-coredeps-20220131172322-e6e3ac4
     ${{ if ne(parameters.disableComponentGovernance, '') }}:
       disableComponentGovernance: ${{ parameters.disableComponentGovernance }}
     variables:
