Do less copying / zipping for Helix (#40134)
- use .dotnet/ folders instead of App.Ref/App.Runtime packages for dotnet-cli layouts
  - no need to unzip files into another layout
  - fail fast or emit message when layouts don't exist
- set `$(TestDependsOnAspNetPackages)` to `false` by default
  - no need to copy all packages into publish/ folders of most test projects
    - upload very few times per queue (2 today, maybe 4 in the future), not for _every_ work item
    - reduce the size of most work item payloads, saving bandwidth and time
    - reduction should not cause problems, even around major version and TFM changes (see .dotnet/ folders)
  - add `$(TestDependsOnAspNetAppPackages)` for the App.UnitTests case; just 2 packages needed there
- get App.UnitTests working in local builds
  - grab RuntimeList.xml file from App.Runtime's obj/ folder
  - find needed packages whether running locally or on Helix agents; should always exist

nits:
- remove test infrastructure we don't need anymore
  - use one property for shared Fx and targeting pack versions; always the same
  - remove `$env:ASPNET_RUNTIME_PATH`
- use `$(ArtifactsShippingPackagesDir)` in Helix.targets
- use `[MSBuild]::NormalizeDirectory(...)` and `$([System.IO.Path]::Combine(...)` in helix.proj
- rename silly ...ListListsContains... tests
- remove extra `$(TestDependsOnAspNetXyz)` settings to their new default values
- add more comments

--- a/eng/targets/Helix.targets
+++ b/eng/targets/Helix.targets
@@ -47,13 +47,24 @@
     <HelixPreCommand Include="call RunPowershell.cmd InstallNode.ps1 $(NodeVersion) || exit /b 1" />
   </ItemGroup>
 
-  <!-- $(TestDependsOnAspNetRuntime) implies $(TestDependsOnAspNetPackages). Separate for the App.UnitTests case. -->
-  <PropertyGroup Condition=" $(TestDependsOnAspNetRuntime) AND !$(TestDependsOnAspNetPackages) ">
-    <TestDependsOnAspNetPackages>true</TestDependsOnAspNetPackages>
+  <!-- $(TestDependsOnAspNetPackages) implies $(TestDependsOnAspNetRuntime). -->
+  <PropertyGroup Condition=" $(TestDependsOnAspNetPackages) AND !$(TestDependsOnAspNetRuntime) ">
+    <TestDependsOnAspNetRuntime>true</TestDependsOnAspNetRuntime>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TestDependsOnAspNetPackages) ">
+
+  <!--
+    Note wildcards mean work items may be submitted without necessary packages when using RunHelix.ps1. Without
+    the packages, the RunHelix.ps1 build won't fail fast and tests will fail on the Helix agents.
+    Similarly, the artifacts/packages/ folder may contain old packages e.g. some built on
+    another local branch when using RunHelix.ps1, invalidating tests to some extent.
+  -->
+  <ItemGroup>
     <!-- Grab all shipping packages. -->
-    <HelixContent Include="$(RepoRoot)artifacts\packages\$(Configuration)\Shipping\*$(SharedFxVersion).nupkg" />
+    <HelixContent Include="$(ArtifactsShippingPackagesDir)*$(SharedFxVersion).nupkg"
+        Condition=" $(TestDependsOnAspNetPackages) "/>
+    <!-- Grab just the App.Ref and App.Runtime packages. -->
+    <HelixContent Include="$(ArtifactsShippingPackagesDir)Microsoft.AspNetCore.App.*$(SharedFxVersion).nupkg"
+        Condition=" $(TestDependsOnAspNetAppPackages) "/>
   </ItemGroup>
 
   <ItemGroup>
