--- a/src/Mvc/Mvc.Abstractions/src/Microsoft.AspNetCore.Mvc.Abstractions.csproj
+++ b/src/Mvc/Mvc.Abstractions/src/Microsoft.AspNetCore.Mvc.Abstractions.csproj
@@ -13,11 +13,8 @@ Microsoft.AspNetCore.Mvc.IActionResult</Description>
 
   <ItemGroup>
     <Compile Include="$(SharedSourceRoot)ClosedGenericMatcher\*.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Include="..\..\..\Shared\ParameterBindingMethodCache.cs" Link="ModelBinding\ParameterBindingMethodCache.cs" />
-    <Compile Include="..\..\..\Shared\TypeNameHelper\TypeNameHelper.cs" Link="ModelBinding\TypeNameHelper.cs" />
+    <Compile Include="$(SharedSourceRoot)\ParameterBindingMethodCache.cs" Link="ModelBinding\ParameterBindingMethodCache.cs" />
+    <Compile Include="$(SharedSourceRoot)\TypeNameHelper\TypeNameHelper.cs" Link="ModelBinding\TypeNameHelper.cs" />
   </ItemGroup>
 
   <ItemGroup>
