!temporary! Test IIS locally

--- a/src/Servers/IIS/IIS/test/Directory.Build.props
+++ b/src/Servers/IIS/IIS/test/Directory.Build.props
@@ -9,6 +9,7 @@
     <!-- IIS tests are Windows-only -->
     <IsWindowsOnlyTest>true</IsWindowsOnlyTest>
     <TestDependsOnIIS>true</TestDependsOnIIS>
+    <BuildHelixPayload>false</BuildHelixPayload>
   </PropertyGroup>
 
 </Project>
