--- a/src/Servers/testassets/Directory.Build.props
+++ b/src/Servers/testassets/Directory.Build.props
@@ -2,7 +2,7 @@
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory)..\, Directory.Build.props))\Directory.Build.props" />
 
   <PropertyGroup>
-    <!-- Local testing does not work when bin/ directory is not in project directory due to deployer expectations. -->
+    <!-- Tests do not work on Helix or when bin/ directory is not in project directory due to undeclared dependency on test content. -->
     <BaseOutputPath />
     <OutputPath />
   </PropertyGroup>
